--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -937,7 +937,7 @@ h1,h2,h3,h4,h5 {
   }
   .products-carousel {
     .swiper-container {
-      overflow: visible;
+      overflow: hidden;
     }
   }
 }
