add price discount for product in home, products pages

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -893,6 +893,8 @@ h1,h2,h3,h4,h5 {
     }
     .product__price {
       display: flex;
+      text-decoration: line-through;
+      font-size: 14px;
       h4 {
         font-weight: 400;
         font-size: 15px;
