--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -11,11 +11,83 @@
 
     /*height: 100%;*/
 }
+.background-error-modal{
+    background-color: rgba(58, 49, 49, 0.3);
+    width: 100%;
+    height: 100%;
+}
+.inner-error-modal{
+    position: absolute;
+    top: 0;
+    width: 300px;
+    height: 306px;
+    background-color: white;
+    border-radius: 8px;
+    left: calc(50% - 300px/2 + 0.5px);
+    top: calc(50% - 306px/2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 48px;
+}
+.action-handle-error{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 24px;
+    width: 264px;
+
+}
+.action-handle-error > p:first-child{
+    width: 128px;
+    height: 50px;
+    background: #FFFFFF;
+    border: 1px solid #3A3131;
+    box-shadow: 0px 10px 10px rgba(218, 218, 218, 0.16);
+    border-radius: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.close-error-alert{
+    width: 128px;
+    height: 50px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 10px rgba(218, 218, 218, 0.16);
+    border-radius: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: #DA161D;
+    color: white;
+}
+.action-handle-error > p:last-child{
+    width: 128px;
+    height: 50px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 10px rgba(218, 218, 218, 0.16);
+    border-radius: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: #DA161D;
+    color: white;
+}
+.inner-error-modal > p{
+    font-weight: 700;
+    font-size: 14px;
+    margin: 25px 47px 0 47px;
+    text-align: center;
+    color: black;
+}
 .inner-success {
     /*position: absolute;*/
     /*top: 20%;*/
     /*left: calc(50% - 50px);*/
-    width: 300px;
+    width: 500px;
     margin: auto;
     margin-top: 100px;
 
