--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -46,3 +46,20 @@
     color: white;
     border-radius: 16px;
 }
+.btn-view-delete-order{
+    width: 70px;
+    height: 30px;
+    background-color: red;
+    border: none;
+    color: white;
+    border-radius: 16px;
+}
+.content-order{
+    border: 1px solid rgba(128, 128, 128, 0.53);
+}
+.content-order> td{
+    /*border: 1px solid black;*/
+    text-align: center;
+    padding: 10px 0;
+    border: 1px solid rgba(128, 128, 128, 0.53);
+}
