--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -1,3 +1,24 @@
 .delivery-selected{
     background-color: rgba(133, 133, 133, 0.18);
 }
+.cart-empty{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+
+}
+.image-empty-cart{
+    width: 200px;
+    margin: auto;
+    margin-top: 100px;
+}
+.cart-empty > button{
+    width: 200px;
+    margin: auto;
+    margin-top: 20px;
+}
