--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -10,3 +10,24 @@
     background-color: black;
     color: white;
 }
+.product__image{
+    position: relative;
+}
+.favorite-cart{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    z-index: 10;
+}
+.list-product-in-favorite-cart{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+
+}
+/*.favorite-cart > img{*/
+/*    width: 40px;*/
+/*    height: 40px;*/
+/*}*/
