--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -27,6 +27,30 @@
     grid-gap: 20px;
 
 }
+.form-comment{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.form-comment > input{
+    background-color: rgba(128, 128, 128, 0.07);
+    width: 200px;
+    height: 30px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+.form-comment .react-rater{
+    font-size: 25px;
+}
+.form-comment .react-rater > div .is-active{
+    color: orange;
+}
+.form-comment button{
+    margin-top: 10px;
+}
+
+
 /*.favorite-cart > img{*/
 /*    width: 40px;*/
 /*    height: 40px;*/
