--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -63,3 +63,37 @@
     padding: 10px 0;
     border: 1px solid rgba(128, 128, 128, 0.53);
 }
+.input-product{
+    width: 600px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+.input-product > label{
+    width: 130px;
+    height: 50px;
+}
+.input-product > input{
+    width: 400px;
+    background-color: rgba(204, 204, 204, 0.15) !important;
+    padding-left: 10px;
+}
+.confirm-button{
+    background-color: red;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+}
+.title-reason{
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+.cancel-button{
+    border: 1px solid black;
+    width: 100px;
+    height: 30px;
+    margin-right: 15px;
+    border-radius: 8px;
+}
