--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -97,3 +97,26 @@
     margin-right: 15px;
     border-radius: 8px;
 }
+.inner-reason-modal{
+    position: absolute;
+    top: 0;
+    width: 300px;
+    height: 306px;
+    background-color: white;
+    border-radius: 8px;
+    left: calc(50% - 300px/2 + 0.5px);
+    top: calc(50% - 306px/2);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 30px;
+    padding-top: 48px;
+}
+.btn-view-confirm-order{
+    width: 80px;
+    height: 30px;
+    background-color: #00b2ff;
+    border: none;
+    color: white;
+    border-radius: 8px;
+}
